// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton should be disabled animated 1`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item text" style="width: 100%;">
      <!---->
    </div>
    <div class="fect-skeleton__item text" style="width: 100%;">
      <!---->
    </div>
    <div class="fect-skeleton__item text" style="width: 100%;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Skeleton should be render three rows in Skeleton 1`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item text animated" style="width: 100%;">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated" style="width: 100%;">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated" style="width: 100%;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Skeleton should be support custom rowsWidth when have not slot 1`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item text animated">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Skeleton should be support skeleton slots 1`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item circle animated">
      <!---->
    </div>
  </div>
</div>
`;
